// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpertApp test should render a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Puch Man"
      id="One Puch Man"
    />
    <GifGrid
      category=" Dragon Ball Z"
      id=" Dragon Ball Z"
    />
  </ol>
</Fragment>
`;

exports[`GifExpertApp test should render correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
